--- a/Sandbox/index.html
+++ b/Sandbox/index.html
@@ -9,5 +9,5 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
-    <script src=tipcalc.js></script>
+    <script src=sandbox.js></script>
 </html>
